Fixed wrong visibility check due to not exact fractions
- Added padding to thumbnail container element to avoid wrong comparison result due to difference in the fraction part of the widths
- Changed height for "release notes" to percent value to avoid inaccessible top part when the browser window is not high enough

--- a/ImageGallery/css/style.css
+++ b/ImageGallery/css/style.css
@@ -265,7 +265,7 @@ footer {
     right: 36px;
 
     width: 500px;
-    height: 500px;
+    height: 90%;
 
     background-color: midnightblue;
     color: white;
@@ -306,6 +306,7 @@ footer {
 #thumbnailsBrowser {
     min-height: 144px;
     /*align-items: center;*/
+    padding: 0 5px; /* just to work around not exact fractional width values when checking visibility */
 
     display: flex;
     flex-direction: row;
